--- a/client/src/styles/ProjectPage.css
+++ b/client/src/styles/ProjectPage.css
@@ -7,7 +7,8 @@
 
 .projects-page {
   padding: 20px;
-  margin-top: -300px;
+  margin-top: -200px;
+  margin-left: 300px;
 }
 .search-bar {
   display: flex;
